# pyAPE

./: README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
contacts_parser/: __main__.py  conf.py  processor.py
contacts_parser/models/: flow_models.py  static_model.py
contacts_parser/parsers/: basic_parser.py  descriptor.py  file_parser.py  pandas_toolbox.py
contacts_parser/webapp/: home.py
contacts_parser/webapp/pages/: 01_classes.py  02_recherche.py
contacts_parser/writers/: contacts_writer.py
tests/contacts_parser/: test_conf_setup.py
tests/contacts_parser/models/: test_flow_models.py
webapp/: home.py
webapp/pages/: 01_classes.py  02_recherche.py
